fixed instrument icon not updating changing from modal to extension of track compo; started trying to make wave surfer or track progress visible, must be finished

--- a/staff/rodrigo-castro/fullstack/finalproject/skrach/app/globals.css
+++ b/staff/rodrigo-castro/fullstack/finalproject/skrach/app/globals.css
@@ -109,4 +109,8 @@
   .filter-orange {
     filter: invert(48%) sepia(47%) saturate(741%) hue-rotate(347deg) brightness(91%) contrast(95%)
   }
+
+  .overall {
+    z-index: 999;
+  }
 }
